@@ -613,6 +613,7 @@ wxGTK:
 - Fix AUI panel re-docking.
 - Add support for wxDD_DIR_MUST_EXIST to wxDirDialog.
 - Fix disappearing mouse clicks when using wxTreeCtrl.
+- Fix calls to Move{Before,After}InTabOrder() after parent window creation.
 
 wxMSW:
 
